--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -49,6 +49,10 @@ section {
   .medium-header h2 {
     font-size: 2.5rem;
   }
+
+  h1.display-3 {
+    font-size: 3rem;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
