--- a/public/assets/sass/includes/_utils.scss
+++ b/public/assets/sass/includes/_utils.scss
@@ -18,4 +18,8 @@
          font-size: 2.5rem;
       }
    }
+
+   h1.display-3 {
+      font-size: 3rem;
+   }
 }
