--- a/public/assets/sass/shop.scss
+++ b/public/assets/sass/shop.scss
@@ -26,7 +26,7 @@
    }
 
    &__description {
-      font-size: 1.4rem;
+      font-size: 1.6rem;
       margin-bottom: 5px;
    }
 
@@ -43,31 +43,26 @@
 
    &__grid {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(200px, 250px));
+      grid-template-columns: repeat(auto-fit, minmax(200px, 250px));
       column-gap: 60px;
       row-gap: 100px;
       padding-left: 20px;
       padding-right: 20px;
       justify-content: center;
+      align-items: center;
    }
 
-   form {
+   .addcart-link {
       width: 100%;
+      color: $orangered;
+      font-weight: 600;
+      font-size: 1.5rem;
+      display: inline-block;
+      width: 100%;
+      text-decoration: none;
 
-      button {
-         outline: none;
-         border: none;
-         color: $orangered;
-         font-weight: 600;
-         font-size: 1.5rem;
-         background: transparent;
-         display: inline-block;
-         width: 130px;
-         margin: auto;
-
-         &:hover {
-            color: darken($orangered, 20%);
-         }
+      &:hover {
+         color: darken($orangered, 20%);
       }
    }
 
@@ -80,6 +75,7 @@
 
    figure {
       position: relative;
+      height: 320px;
    }
 }
 
